# django-secure-auth

./: .env  README.md  celerybeat-schedule  main.py  manage.py  pyproject.toml
accounts/: admin.py  apps.py  authentication.py  csrf_authentication.py  extensions.py  helper.py  manager.py  models.py  permissions.py  schema.py  serializers.py  set_cookies.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/test/: test_model.py  test_user.py
celery_tasks/: helper.py  notifications.py
config/: celery_config.py  csrf_config.py  drf_settings.py  jwt_config.py  logging.py  postgresql_config.py  redis_config.py  spectacular_settings.py
django_secure_auth/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
notifications/: services.py
static/bootstrap-5.3.3-dist/js/base/: form.js
templates/emails/: resend_verify_email.html  set_new_password.html
templates/success_template/: password_change_successful.html  verify_success.html
utils/: constants.py  generate.py  generic_api_view.py  helper.py  logger.py  otp.py
